@@ -354,6 +354,10 @@
       destination="5024"
       profile="Products.minaraad:default">
     <gs:upgradeStep
+        title="Reindex the object_provides index."
+        description="This index gives errors when indexing content."
+        handler="Products.minaraad.migration.reindex_object_provides_index" />
+    <gs:upgradeStep
         title="Update our custom content types to blob file fields"
         description="These types are affected: AnnualReport"
         handler="Products.minaraad.migration.migrate_to_blob_file_fields" />
